--- a/FishingBlog/Views/_ViewImports.cshtml
+++ b/FishingBlog/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using FishingBlog
 @using FishingBlog.Models
+@using FishingBlog.Models.Publications
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
