--- a/FishingBlog/Views/Shared/_Layout.cshtml
+++ b/FishingBlog/Views/Shared/_Layout.cshtml
@@ -6,14 +6,17 @@
     <title>@ViewData["Title"] - Fishing Blog</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/myfav.ico">
+
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    <p>This is the place where you 
-                    <br>learn how to catch big fish
+                    <p>
+                        This is the place where you
+                        <br>learn how to catch big fish
                     </p>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -39,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.UtcNow.Year - FishingBlog 
+            &copy; @DateTime.UtcNow.Year - FishingBlog
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
