--- a/FishingBlog/Views/Publications/Add.cshtml
+++ b/FishingBlog/Views/Publications/Add.cshtml
@@ -1,36 +1,48 @@
 ﻿@model AddPublicationFormModel
 
-@{ 
+@{
     ViewData["Title"] = "Add Publication";
 }
 
-<form method="post">
-    <div class="form-group">
-        <label asp-for="Title"></label>
-        <input asp-for="Title" class="form-control"  placeholder="Some cool title...">
+<div class="container">
+    <div class="row">
+        <div class="offset-md-3 col-md-8 col-sm-12">
+            <h2 class="heading-margin text-center">
+                Add something interesting
+            </h2>
+
+            <form method="post">
+                <div class="form-group">
+                    <label asp-for="Title"></label>
+                    <input asp-for="Title" class="form-control" placeholder="Some cool title...">
+                    <span asp-validation-for="Title" class="small text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Description"></label>
+                    <textarea asp-for="Description" class="form-control" rows="4" placeholder="Write clear and accorate description ..."></textarea>
+                    <span asp-validation-for="Description" class="small text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ImageUrl"></label>
+                    <input asp-for="ImageUrl" class="form-control" placeholder="Place your URL here...">
+                    <span asp-validation-for="ImageUrl" class="small text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="PublishedOn"></label>
+                    <input asp-for="PublishedOn" class="form-control" placeholder="@DateTime.UtcNow.ToString("MM/dd/yyyy")" readonly>
+                </div>
+                <div class="form-group">
+                    <label asp-for="TopicId"></label>
+                    <select asp-for="TopicId" class="form-control">
+                        @foreach (var categori in Model.Sections)
+                        {
+                            <option value="@categori.Id">@categori.Title</option>
+                        }
+                    </select>
+                </div>
+
+                <input class="btn btn-primary text-center" type="submit" value="Add">
+            </form>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="exampleFormControlSelect1">Example select</label>
-        <select class="form-control" id="exampleFormControlSelect1">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-        </select>
-    </div>
-    <div class="form-group">
-        <label for="exampleFormControlSelect2">Example multiple select</label>
-        <select multiple class="form-control" id="exampleFormControlSelect2">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-        </select>
-    </div>
-    <div class="form-group">
-        <label for="exampleFormControlTextarea1">Example textarea</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    </div>
-</form>
+</div>
