--- a/FishingBlog/Views/Home/Index.cshtml
+++ b/FishingBlog/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-3">Добре дошли в риболовният блог на Иван Минчев</h1>
+    <p></p>
+   <p>Тук ще попаднете на интересни неща. Ще се научите на нови техники и тактики. Ще се усведомите за личните ми успехи в риболова.</p>
+    <p ><img src="/cool-fish-28422768.jpg" alt="Flying Kites" style="width: 500px; height: 500px;"></p>
 </div>
