--- a/FishingBlog/Views/Publications/Add.cshtml
+++ b/FishingBlog/Views/Publications/Add.cshtml
@@ -29,7 +29,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="PublishedOn"></label>
-                    <input asp-for="PublishedOn" class="form-control" placeholder="@DateTime.UtcNow.ToString("MM/dd/yyyy")" readonly>
+                    <input asp-for="PublishedOn" class="form-control" placeholder="@DateTime.UtcNow.ToString("dd/MM/yyyy")" readonly>
                 </div>
                 <div class="form-group">
                     <label asp-for="TopicId"></label>
