--- a/FishingBlog/Views/Shared/_Layout.cshtml
+++ b/FishingBlog/Views/Shared/_Layout.cshtml
@@ -15,9 +15,9 @@
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <p>
-                        This is the place where you
-                        <br>learn how to catch big fish
+                    <img src="/Untitled.jpg" alt="Flying Kites" style="width: 70px; height: 70px;">
                     </p>
+                    <p></p>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -27,6 +27,9 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Publications" asp-action="Add">  Add Publication</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Publications" asp-action="All">  All Publications</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
