Make categories entities

--- a/FishingBlog/Views/Shared/_Layout.cshtml
+++ b/FishingBlog/Views/Shared/_Layout.cshtml
@@ -28,8 +28,20 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Publications" asp-action="Add">  Add Publication</a>
                         </li>
-                        <li class="nav-item">
+                        <!--<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Publications" asp-action="All">  All Publications</a>
+                        </li>-->
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="News" asp-action="All">News</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="FishingAdvices" asp-action="All">Advices</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="FishingSpots" asp-action="All">Spots</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="FishingStories" asp-action="All">Stories</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
