--- a/FishingBlog/Views/_ViewImports.cshtml
+++ b/FishingBlog/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using FishingBlog
 @using FishingBlog.Models
 @using FishingBlog.Models.Publications
+@using FishingBlog.Controllers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
