--- a/FishingBlog/Views/Shared/_Layout.cshtml
+++ b/FishingBlog/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <p>
-                    <img src="/Untitled.jpg" alt="Flying Kites" style="width: 70px; height: 70px;">
+                        <img src="/Untitled.jpg" alt="Flying Kites" style="width: 70px; height: 70px;">
                     </p>
                     <p></p>
                 </a>
@@ -29,19 +29,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Publications" asp-action="Add">  Add Publication</a>
                         </li>
                         <!--<li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Publications" asp-action="All">  All Publications</a>
-                        </li>-->
+        <a class="nav-link text-dark" asp-area="" asp-controller="Publications" asp-action="All">  All Publications</a>
+    </li>-->
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="News" asp-action="All">News</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="News" asp-action="AllNewsPage">News</a>
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="FishingAdvices" asp-action="All">Advices</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="FishingAdvices" asp-action="AllAdvices">Advices</a>
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="FishingSpots" asp-action="All">Spots</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="FishingSpots" asp-action="AllSpots">Spots</a>
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="FishingStories" asp-action="All">Stories</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="FishingStories" asp-action="AllStories">Stories</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
