--- a/FishingBlog/Views/_ViewImports.cshtml
+++ b/FishingBlog/Views/_ViewImports.cshtml
@@ -2,4 +2,8 @@
 @using FishingBlog.Models
 @using FishingBlog.Models.Publications
 @using FishingBlog.Controllers
+@using FishingBlog.Models.News
+@using FishingBlog.Models.FishingStories
+@using FishingBlog.Models.FishingSpots
+@using FishingBlog.Models.FishingAdvices
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
