--- a/FishingBlog/Views/News/AllNewsPage.cshtml
+++ b/FishingBlog/Views/News/AllNewsPage.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PublicationListingViewModel>
+﻿@model IEnumerable<NewsListingViewModel>
 
 <div class="row">
     @foreach (var publication in Model)
@@ -10,9 +10,9 @@
                     <h5 class="card-title text-center">@publication.Title  </h5>
                     <h6 class="card-title text-danger text-center">@(publication.Sections)</h6>
                     <p class="card-text text-center">Post something</p>
-                    <a asp-controller="Products" asp-action="Details" asp-route-id="@publication.Id" class="btn btn-primary">View More</a>
+                    <a asp-controller="News" asp-action="Details" asp-route-id="publication.Id" class="btn btn-primary">View More</a>
                 </div>
             </div>
         </div>
     }
-</div>
+
