--- a/FishingBlog/Views/Publications/All.cshtml
+++ b/FishingBlog/Views/Publications/All.cshtml
@@ -10,7 +10,7 @@
                 <h5 class="card-title text-center">@publication.Title  </h5>
                 <h6 class="card-title text-danger text-center">@(publication.Sections)</h6>
                 <p class="card-text text-center">Post something</p>
-                <a asp-controller="Products" asp-action="Details" asp-route-id="@publication.Id" class="btn btn-primary">View More</a>
+                <a asp-controller="Publications" asp-action="Details" asp-route-id="@publication.Id" class="btn btn-primary">View More</a>
             </div>
         </div>
     </div>
