--- a/FishingBlog/Views/Shared/_Layout.cshtml
+++ b/FishingBlog/Views/Shared/_Layout.cshtml
@@ -28,20 +28,20 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Publications" asp-action="Add">  Add Publication</a>
                         </li>
-                        <!--<li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Publications" asp-action="All">  All Publications</a>
-    </li>-->
-                        <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="News" asp-action="AllNewsPage">News</a>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Publications" asp-action="All">  All Publications</a>
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="FishingAdvices" asp-action="AllAdvices">Advices</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Publications" asp-action="AllNewsPage">News</a>
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="FishingSpots" asp-action="AllSpots">Spots</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Publications" asp-action="AllAdvices">Advices</a>
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="FishingStories" asp-action="AllStories">Stories</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Publications" asp-action="AllSpots">Spots</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Publications" asp-action="AllStories">Stories</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
