--- a/FishingBlog/Views/Publications/Add.cshtml
+++ b/FishingBlog/Views/Publications/Add.cshtml
@@ -1,14 +1,14 @@
 ﻿@model AddPublicationFormModel
 
 @{
-    ViewData["Title"] = "Add Publication";
+    ViewBag.Title = "Add Publication";
 }
 
 <div class="container">
     <div class="row">
         <div class="offset-md-3 col-md-8 col-sm-12">
             <h2 class="heading-margin text-center">
-                Add something interesting
+                ViewBag.Title
             </h2>
 
             <form method="post">
