--- a/FishingBlog/Views/_ViewImports.cshtml
+++ b/FishingBlog/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using FishingBlog
 @using FishingBlog.Models
 @using FishingBlog.Models.Publications
+@using FishingBlog.Models.Administrators
 @using FishingBlog.Controllers
+@using FishingBlog.Models.News
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
