--- a/FishingBlog/Views/News/Details.cshtml
+++ b/FishingBlog/Views/News/Details.cshtml
@@ -1,4 +1,4 @@
-﻿<!--@model IEnumerable<DetailsVie
+﻿@model IEnumerable<DetailsViewModel>
 
 <div class="blog-single gray-bg">
     <div class="container">
@@ -8,10 +8,10 @@
                 <div class="col-lg-8 m-15px-tb">
                     <article class="article">
                         <div class="article-img">
-                            <img src="@detail.Image" title="" alt="">
+                            <img src="@detail.ImageUrl" title="" alt="">
                         </div>
                         <div class="article-title">
-                            <h6><a href="#">@detail.Category</a></h6>
+                            <h6><a href="#">@detail.Sections</a></h6>
                             <h2>@detail.Title</h2>
                         </div>
                         <div class="article-content">
